# MetalQuestLink

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ja.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  session.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: native.yml  quest-apk.yml
docs/: README.md  compatibility.md  demo-script.md  devpost-submission.md  final-report.md  log.md  migration-0.2.md  notes.md  phase7-report.md  plan.md  progress.md  public-release-checklist.md  spec.md
editor-package/: README.md  package.json
editor-package/Editor/: AdbBridge.cs  LayerStatus.cs  MaQuestLink.Editor.asmdef  MaQuestLinkPreflight.cs  MaQuestLinkSettings.cs  MaQuestLinkWindow.cs  MetalQuestLink.Editor.asmdef  MetalQuestLinkPreflight.cs  MetalQuestLinkSettings.cs  MetalQuestLinkWindow.cs  OpenXRLayerInstaller.cs  PlayModeBootstrap.cs  StandaloneOpenXRConfigurator.cs
editor-package/Native~/macOS/: XrApiLayer_maquestlink.json  XrApiLayer_metalquestlink.json
editor-package/Tests/Editor/: MaQuestLink.Editor.Tests.asmdef  MetalQuestLink.Editor.Tests.asmdef  OpenXRLayerInstallerTests.cs
layer/: CMakeLists.txt
layer/include/maquestlink/: protocol.hpp
layer/include/metalquestlink/: protocol.hpp
layer/native-test/: hello_xr_metal.mm
layer/src/: input_injection.cpp  input_injection.hpp  openxr_layer.cpp  openxr_layer.expsym  protocol.cpp  streaming.hpp  streaming.mm  transport.cpp  transport.hpp
layer/tests/: protocol_tests.cpp
layer/tools/: mock_viewer.mm
quest-client/Assets/MaQuestLink/Editor/: BuildQuestClient.cs  MaQuestLink.QuestClient.Editor.asmdef
quest-client/Assets/MaQuestLink/Runtime/: ClockSynchronizer.cs  ExternalSurfacePresenter.cs  HandTrackingVisualizer.cs  ImmersiveProjectionFeature.cs  MaQuestLink.QuestClient.asmdef  MediaCodecDecoder.cs  PassthroughConfigurator.cs  Protocol.cs  QuestClientController.cs  QuestHandSampler.cs  QuestHaptics.cs  QuestInputSampler.cs  StreamTransport.cs
quest-client/Assets/MaQuestLink/Tests/EditMode/: MaQuestLink.QuestClient.Tests.asmdef  ProtocolTests.cs
quest-client/Assets/MetalQuestLink/Editor/: BuildQuestClient.cs  MetalQuestLink.QuestClient.Editor.asmdef
quest-client/Assets/MetalQuestLink/Runtime/: ClockSynchronizer.cs  ExternalSurfacePresenter.cs  HandTrackingVisualizer.cs  ImmersiveProjectionFeature.cs  MediaCodecDecoder.cs  MetalQuestLink.QuestClient.asmdef  PassthroughConfigurator.cs  Protocol.cs  QuestClientController.cs  QuestHandSampler.cs  QuestHaptics.cs  QuestInputSampler.cs  StreamTransport.cs
quest-client/Assets/MetalQuestLink/Tests/EditMode/: MetalQuestLink.QuestClient.Tests.asmdef  ProtocolTests.cs
quest-client/Assets/Oculus/: OculusProjectConfig.asset
quest-client/Assets/Plugins/Android/: AndroidManifest.xml
quest-client/Assets/Resources/: ImmersiveDebuggerSettings.asset  OVRPlatformToolSettings.asset  OculusRuntimeSettings.asset
quest-client/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
quest-client/Assets/XR/Settings/: OpenXR Package Settings.asset
quest-client/NativeProjection/: CMakeLists.txt  projection_layer.cpp
quest-client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
samples/MetaXRMinimal/: README.md
samples/MetaXRMinimal/Assets/MaQuestLinkSample/Editor/: MaQuestLink.Sample.Editor.asmdef  SampleBuilder.cs
samples/MetaXRMinimal/Assets/MaQuestLinkSample/Scenes/: Minimal.unity
samples/MetaXRMinimal/Assets/MaQuestLinkSample/Tests/PlayMode/: MaQuestLink.Sample.PlayModeTests.asmdef  SamplePlayModeTests.cs
samples/MetaXRMinimal/Assets/MetalQuestLinkSample/: DemoCaptureMotion.cs  MetalQuestLink.Sample.Demo.asmdef
samples/MetaXRMinimal/Assets/MetalQuestLinkSample/Editor/: DemoCaptureBuilder.cs  MetalQuestLink.Sample.Editor.asmdef  SampleBuilder.cs
samples/MetaXRMinimal/Assets/MetalQuestLinkSample/Scenes/: DemoCapture.unity  Minimal.unity
samples/MetaXRMinimal/Assets/MetalQuestLinkSample/Tests/PlayMode/: MetalQuestLink.Sample.PlayModeTests.asmdef  SamplePlayModeTests.cs
samples/MetaXRMinimal/Assets/Resources/: OculusRuntimeSettings.asset
samples/MetaXRMinimal/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
samples/MetaXRMinimal/Assets/XR/Settings/: OpenXRPackageSettings.asset
samples/MetaXRMinimal/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
scripts/: build_quest_client.sh  build_quest_projection.sh  build_release.sh  doctor.sh  e2e_device.sh  test_phase1.sh  test_phase2.sh  test_phase3.sh  test_phase5.sh  test_phase7.sh  test_phase7_clean.sh  test_phase8.sh  test_quest_client.sh  test_unity_matrix.sh
